aggiunto regole globali font in input.css

--- a/immobiliaris-be/src/main/resources/static/styles/input.css
+++ b/immobiliaris-be/src/main/resources/static/styles/input.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-montserrat;
+  }
+
+  h1 {
+    @apply font-cinzel-decorative;
+  }
+
+  h2 {
+    @apply font-cinzel;
+  }
+}
