--- a/immobiliaris-be/src/main/resources/static/styles/style-tailwind.css
+++ b/immobiliaris-be/src/main/resources/static/styles/style-tailwind.css
@@ -660,8 +660,16 @@ video {
   top: -1.5rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .bottom-4 {
   bottom: 1rem;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .left-4 {
@@ -898,6 +906,10 @@ video {
   height: 2rem;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-auto {
   height: auto;
 }
@@ -909,10 +921,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-28 {
-  height: 7rem;
 }
 
 .max-h-0 {
@@ -983,16 +991,16 @@ video {
   width: 40%;
 }
 
+.w-\[calc\(100\%\+1\.3px\)\] {
+  width: calc(100% + 1.3px);
+}
+
 .w-full {
   width: 100%;
 }
 
 .w-px {
   width: 1px;
-}
-
-.w-28 {
-  width: 7rem;
 }
 
 .max-w-2xl {
@@ -1021,6 +1029,11 @@ video {
 
 .flex-grow {
   flex-grow: 1;
+}
+
+.rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-2 {
@@ -1425,6 +1438,10 @@ video {
   background-color: rgb(249 242 232 / var(--tw-bg-opacity, 1));
 }
 
+.bg-my-cream\/40 {
+  background-color: rgb(249 242 232 / 0.4);
+}
+
 .bg-my-green-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(39 66 57 / var(--tw-bg-opacity, 1));
@@ -1520,6 +1537,22 @@ video {
 
 .to-transparent {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
+.fill-\[\#809074\] {
+  fill: #809074;
+}
+
+.fill-\[\#F9F2E8\] {
+  fill: #F9F2E8;
+}
+
+.fill-\[\#\] {
+  fill: #;
+}
+
+.fill-current {
+  fill: currentColor;
 }
 
 .object-contain {
@@ -1649,6 +1682,10 @@ video {
   padding-bottom: 3rem !important;
 }
 
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1683,6 +1720,18 @@ video {
 
 .pt-0 {
   padding-top: 0px;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-1\.5 {
+  padding-top: 0.375rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
 }
 
 .pt-16 {
@@ -2014,6 +2063,10 @@ video {
   opacity: 0.9;
 }
 
+.opacity-30 {
+  opacity: 0.3;
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -2201,6 +2254,10 @@ video {
 .hover\:bg-my-orange:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(186 104 48 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-my-orange\/90:hover {
+  background-color: rgb(186 104 48 / 0.9);
 }
 
 .hover\:bg-purple-100:hover {
@@ -2419,6 +2476,10 @@ video {
     display: flex;
   }
 
+  .md\:h-\[90px\] {
+    height: 90px;
+  }
+
   .md\:w-auto {
     width: auto;
   }
@@ -2464,6 +2525,10 @@ video {
     padding-bottom: 6rem;
   }
 
+  .md\:pb-48 {
+    padding-bottom: 12rem;
+  }
+
   .md\:pl-0 {
     padding-left: 0px;
   }
@@ -2491,6 +2556,10 @@ video {
 @media (min-width: 1024px) {
   .lg\:ml-auto {
     margin-left: auto;
+  }
+
+  .lg\:inline {
+    display: inline;
   }
 
   .lg\:flex {
